--- a/share/man/man4/Makefile
+++ b/share/man/man4/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.158 2001/04/13 01:30:33 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.159 2001/04/16 02:08:14 jason Exp $
 
 MAN=	aac.4 ac97.4 adv.4 aha.4 ahb.4 ahc.4 aic.4 ami.4 amphy.4 an.4 \
 	aria.4 ast.4 \
@@ -20,7 +20,7 @@ MAN=	aac.4 ac97.4 adv.4 aha.4 ahb.4 ahc.4 aic.4 ami.4 amphy.4 an.4 \
 	pty.4 puc.4 qsphy.4 raid.4 random.4 ray.4 rl.4 rln.4 \
 	rlphy.4 route.4 scsi.4 sd.4 ses.4 sf.4 siop.4 sis.4 sk.4 sl.4 sm.4 \
 	spp.4 sppp.4 sqphy.4 ss.4 st.4 ste.4 sv.4 tb.4 tcic.4 tcp.4 termios.4 \
-	ti.4 tl.4 tlphy.4 tp.4 tqphy.4 tty.4 tun.4 twe.4 tx.4 txphy.4 \
+	ti.4 tl.4 tlphy.4 tp.4 tqphy.4 tty.4 tun.4 twe.4 tx.4 txp.4 txphy.4 \
 	uaudio.4 ubsec.4 ucom.4 udp.4 uftdi.4 ugen.4 uhci.4 uhid.4 \
 	uk.4 ukbd.4 ukphy.4 ulpt.4 umodem.4 ums.4 umass.4 unix.4 upl.4 urio.4 \
 	usb.4 uscanner.4 usscanner.4 uvisor.4 uyap.4 vga.4 vlan.4 vnd.4 vr.4 \
