--- a/distrib/powerpc/ramdisk/instbin.conf
+++ b/distrib/powerpc/ramdisk/instbin.conf
@@ -1,4 +1,4 @@
-#       $OpenBSD: instbin.conf,v 1.3 2001/03/25 03:49:38 drahn Exp $
+#       $OpenBSD: instbin.conf,v 1.4 2001/04/17 05:49:03 drahn Exp $
 #
 # instbin.conf - unified binary for the inst/upgr floppies
 #
@@ -15,6 +15,7 @@ progs tip rm mt mkdir sed ksh sleep
 progs mv expr test hostname
 progs mg
 
+ln mt eject
 ln chmod chgrp
 ln chmod chown
 ln pax tar
