--- a/gnu/usr.bin/ld/ldd/Makefile
+++ b/gnu/usr.bin/ld/ldd/Makefile
@@ -1,8 +1,8 @@
-#	$OpenBSD: Makefile,v 1.2 1998/03/26 19:46:51 niklas Exp $
+#	$OpenBSD: Makefile,v 1.3 2001/04/17 21:44:38 espie Exp $
 #	$NetBSD: Makefile,v 1.5 1995/10/09 00:09:39 pk Exp $
 
 PROG=	ldd
-SRCS=	ldd.c
+SRCS=	ldd.c scanlib.c
 BINDIR= /usr/bin
 
 .include <bsd.prog.mk>
