--- a/usr.bin/tsort/Makefile
+++ b/usr.bin/tsort/Makefile
@@ -1,5 +1,7 @@
-#	$OpenBSD: Makefile,v 1.3 1997/09/21 11:51:25 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.4 2001/04/18 17:57:27 espie Exp $
 
 PROG=	tsort
+
+CFLAGS+=-Wall -Wno-char-subscripts -Wstrict-prototypes -pedantic -W
 
 .include <bsd.prog.mk>
