--- a/usr.bin/make/Makefile
+++ b/usr.bin/make/Makefile
@@ -1,7 +1,8 @@
-#	$OpenBSD: Makefile,v 1.25 2001/03/02 16:57:26 espie Exp $
+#	$OpenBSD: Makefile,v 1.26 2001/05/03 13:40:59 espie Exp $
 
 PROG=	make
-CFLAGS+= -I${.OBJDIR} -I${.CURDIR} -Wall -Wno-char-subscripts -Wstrict-prototypes
+CFLAGS+= -I${.OBJDIR} -I${.CURDIR} ${WARNINGS}
+WARNINGS=-Wall -W -Wno-char-subscripts -Wstrict-prototypes -pedantic #-Wmissing-prototypes
 
 CFLAGS+=-DUSE_TIMESPEC
 .if (${MACHINE_ARCH} == "m88k")
@@ -9,28 +10,30 @@ CFLAGS+=-O0
 .endif
 
 SRCS=	arch.c buf.c compat.c cond.c dir.c error.c for.c job.c lowparse.c \
-	main.c make.c parse.c str.c suff.c targ.c var.c varmodifiers.c #util.c 
-SRCS+=	lstAppend.c lstAtEnd.c lstAtFront.c lstClose.c lstConcat.c \
-	lstConcatDestroy.c lstDeQueue.c lstDestroy.c lstDupl.c lstEnQueue.c \
-	lstFindFrom.c lstForEachFrom.c \
-	lstInit.c lstInsert.c lstIsAtEnd.c lstIsEmpty.c \
-	lstMember.c lstNext.c lstOpen.c lstRemove.c lstReplace.c lstSucc.c
+	main.c make.c parse.c str.c stats.c suff.c targ.c var.c varmodifiers.c #util.c 
+SRCS+=	lstAddNew.c lstAppend.c lstConcat.c lstConcatDestroy.c \
+	lstDeQueue.c lstDestroy.c lstDupl.c lstFindFrom.c lstForEachFrom.c \
+	lstInit.c lstInsert.c lstMember.c lstRemove.c lstReplace.c lstSucc.c
 .PATH:	${.CURDIR}/lst.lib
 
 
 CLEANFILES+=generate hashconsts.h generate.o regress.o check
 
 CLEANFILES+=${LIBOBJS} libohash.a
-CLEANFILES+= hashconsts.h generate.o generate
+CLEANFILES+= varhashconsts.h condhashconsts.h generate.o generate
 
-beforedepend: hashconsts.h
+beforedepend: varhashconsts.h condhashconsts.h
 # may need tweaking if you add variable synonyms or change the hash function
-MAGICSLOTS=34
+MAGICVARSLOTS=77
+MAGICCONDSLOTS=43
 
-hashconsts.h: generate
-	${.OBJDIR}/generate ${MAGICSLOTS} >${.TARGET}
+varhashconsts.h: generate
+	${.OBJDIR}/generate 1 ${MAGICVARSLOTS} >${.TARGET}
 
-generate: generate.o error.o
+condhashconsts.h: generate
+	${.OBJDIR}/generate 2 ${MAGICCONDSLOTS} >${.TARGET}
+
+generate: generate.o stats.o error.o
 	${CC} -o ${.TARGET} ${CFLAGS} ${.ALLSRC} ${LDADD}
 
 check: regress.o str.o error.o buf.o
@@ -40,10 +43,12 @@ regress: check
 	${.OBJDIR}/check 
 
 # kludge for people who forget to make depend
-var.o: hashconsts.h
+var.o: varhashconsts.h
 
 .if make(install)
 SUBDIR+= PSD.doc
 .endif
+
+.PHONY:		regress
 
 .include <bsd.prog.mk>
