--- a/usr.bin/make/lst.lib/Makefile
+++ b/usr.bin/make/lst.lib/Makefile
@@ -1,11 +1,11 @@
-#	$OpenBSD: Makefile,v 1.9 2000/06/23 16:15:50 espie Exp $
+#	$OpenPackages$
+#	$OpenBSD: Makefile,v 1.10 2001/05/03 13:41:16 espie Exp $
 #	$NetBSD: Makefile,v 1.4 1996/11/06 17:59:31 christos Exp $
 
-OBJ=lstAppend.o lstDupl.o lstInit.o lstOpen.o lstAtEnd.o lstEnQueue.o \
-    lstInsert.o lstAtFront.o lstIsAtEnd.o lstClose.o lstIsEmpty.o \
-    lstRemove.o lstConcat.o lstConcatDestroy.o lstFindFrom.o lstReplace.o \
-    lstMember.o lstSucc.o lstDeQueue.o lstForEachFrom.o \
-    lstDestroy.o lstNext.o 
+OBJ=lstAppend.o lstDupl.o lstInit.o lstEnQueue.o lstInsert.o \
+    lstRemove.o lstConcat.o lstFindFrom.o lstLast.o lstReplace.o lstFirst.o \
+    lstMember.o lstSucc.o lstDeQueue.o \
+    lstForEachFrom.o lstDestroy.o lstAddNew.o lstConcatDestroy.o
 
 CFLAGS+=-I..
 all: ${OBJ}
