o kill register o lots of KNF o passes -Wall o fix some [ug]id_t vs. int issues o use strlcpy/strlcat in favor of strncpy/strncat o use mem* routines everywhere instead of old b* ones o marked several questionable things for later fixing o kill ci.c and cvt.c -- we don't use them o kill read_line.c since it requires fgetln() (bad for portability) o kill salloc.c since it is the same as strup() o Replaced some #ifdef __OpenBSD__ with better tests o remaining problems: malloc return values are rarely checked, select misuse

--- a/usr.bin/sup/Makefile.inc
+++ b/usr.bin/sup/Makefile.inc
@@ -1,5 +1,5 @@
-#	$OpenBSD: Makefile.inc,v 1.4 2001/05/02 22:56:52 millert Exp $
+#	$OpenBSD: Makefile.inc,v 1.5 2001/05/04 22:16:14 millert Exp $
 
 
 CFLAGS+=-UCMUCS -UCMU -UMACH -DVAR_TMP -DHAS_DAEMON -DHAS_POSIX_DIR \
-	-DHAS_LOGIN_CAP -DLIBWRAP -DHAS_FPARSELN
+	-DHAS_LOGIN_CAP -DLIBWRAP -DHAS_STRERROR
