--- a/usr.bin/sup/supfilesrv/Makefile
+++ b/usr.bin/sup/supfilesrv/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.8 2001/05/02 22:56:54 millert Exp $
+#	$OpenBSD: Makefile,v 1.9 2001/05/04 22:16:18 millert Exp $
 
 PROG=	supfilesrv
 MAN=	supservers.8
@@ -6,7 +6,7 @@ MLINKS=	supservers.8 supfilesrv.8
 MLINKS+=supservers.8 supscan.8
 SRCS=	supfilesrv.c scan.c scm.c scmio.c stree.c log.c supmsg.c \
 	atoo.c errmsg.c expand.c ffilecopy.c filecopy.c nxtarg.c \
-	path.c quit.c run.c salloc.c skipto.c vprintf.c netcryptvoid.c
+	path.c quit.c run.c skipto.c vprintf.c netcryptvoid.c
 LDADD+=	-lutil -lwrap
 DPADD+=	${LIBUTIL} ${LIBWRAP}
 BINOWN=	root
