--- a/usr.bin/sup/supscan/Makefile
+++ b/usr.bin/sup/supscan/Makefile
@@ -1,10 +1,10 @@
-#	$OpenBSD: Makefile,v 1.4 1996/06/26 05:40:03 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.5 2001/05/04 22:16:18 millert Exp $
 
 PROG=	supscan
 NOMAN=
 SRCS=	supscan.c stree.c scan.c \
 	atoo.c errmsg.c expand.c ffilecopy.c filecopy.c nxtarg.c \
-	path.c quit.c run.c salloc.c skipto.c vprintf.c netcryptvoid.c
+	path.c quit.c run.c skipto.c vprintf.c netcryptvoid.c
 LDADD+=	-lutil
 DPADD+=	${LIBUTIL}
 BINOWN=	root
