--- a/usr.bin/sup/src/Makefile.sunos5.gcc
+++ b/usr.bin/sup/src/Makefile.sunos5.gcc
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile.sunos5.gcc,v 1.1 1997/10/11 23:34:20 beck Exp $
+#	$OpenBSD: Makefile.sunos5.gcc,v 1.2 2001/05/05 15:32:11 millert Exp $
 
 # Copyright (c) 1992,1991 Carnegie Mellon University
 # All Rights Reserved.
@@ -45,7 +45,7 @@
 SITE			= NETBSD
 #SITE			= CMUCS
 NETBSD_DEFINES		= -UMACH -DVAR_TMP -DHAS_DAEMON -DHAS_POSIX_DIR
-SOLARIS_DEFINES		= -UMACH -DNO_SETLOGIN -DVAR_TMP -DHAS_POSIX_DIR -DNEED_VSNPRINTF -DHAS_VFPRINTF -DNEED_SNPRINTF -DNEED_VIS -DUSE_LOCKF
+SOLARIS_DEFINES		= -UMACH -DNO_SETLOGIN -DVAR_TMP -DHAS_POSIX_DIR -DNEED_VSNPRINTF -DHAS_VFPRINTF -DNEED_SNPRINTF -DNEED_VIS -DUSE_LOCKF -DHAS_STRERROR
 AFS_DEFINES		= -DAFS -I/usr/afsws/include
 OSF_DEFINES		= -UMACH -DOSF -D_BSD -noshrlib -g -DNEED_VSNPRINTF -DVAR_TMP
 CMUCS_DEFINES		= -DMACH -DDOPRINT_VA -DNEED_VPRINTF
