--- a/usr.bin/sup/src/Makefile.sunos5.gcc
+++ b/usr.bin/sup/src/Makefile.sunos5.gcc
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile.sunos5.gcc,v 1.2 2001/05/05 15:32:11 millert Exp $
+#	$OpenBSD: Makefile.sunos5.gcc,v 1.3 2001/05/05 15:56:04 millert Exp $
 
 # Copyright (c) 1992,1991 Carnegie Mellon University
 # All Rights Reserved.
@@ -45,7 +45,7 @@
 SITE			= NETBSD
 #SITE			= CMUCS
 NETBSD_DEFINES		= -UMACH -DVAR_TMP -DHAS_DAEMON -DHAS_POSIX_DIR
-SOLARIS_DEFINES		= -UMACH -DNO_SETLOGIN -DVAR_TMP -DHAS_POSIX_DIR -DNEED_VSNPRINTF -DHAS_VFPRINTF -DNEED_SNPRINTF -DNEED_VIS -DUSE_LOCKF -DHAS_STRERROR
+SOLARIS_DEFINES		= -UMACH -DNO_SETLOGIN -DVAR_TMP -DHAS_POSIX_DIR -DNEED_VIS -DUSE_LOCKF -DHAS_STRERROR -D__EXTENSIONS__
 AFS_DEFINES		= -DAFS -I/usr/afsws/include
 OSF_DEFINES		= -UMACH -DOSF -D_BSD -noshrlib -g -DNEED_VSNPRINTF -DVAR_TMP
 CMUCS_DEFINES		= -DMACH -DDOPRINT_VA -DNEED_VPRINTF
@@ -63,9 +63,9 @@ CFLAGS			= ${DEFS} -O -g -I.
 
 SUPCL			= supcmain.o supcvers.o supcparse.o supcname.o \
 			  supcmisc.o supcmeat.o
-SUPS			= scm.o scmio.o stree.o log.o supmsg.o netcrypt.o
+SUPS			= scm.o scmio.o stree.o log.o supmsg.o netcryptvoid.o
 EXTRA			= atoo.o errmsg.o expand.o ffilecopy.o filecopy.o nxtarg.o  \
-			  path.o quit.o run.o salloc.o skipto.o  vprintf.o snprintf.o vis.o unvis.o
+			  path.o quit.o run.o skipto.o  vprintf.o snprintf.o vis.o unvis.o
 
 
 PROGRAMS		= sup supscan supfilesrv
