--- a/share/man/man4/man4.hp300/Makefile
+++ b/share/man/man4/man4.hp300/Makefile
@@ -1,7 +1,7 @@
-#	$OpenBSD: Makefile,v 1.4 2001/05/11 01:39:54 millert Exp $
+#	$OpenBSD: Makefile,v 1.5 2001/05/11 01:44:35 millert Exp $
 #	from: @(#)Makefile	5.1 (Berkeley) 6/29/90
 
-MAN=	apci.4 autoconf.4 cons.4 ct.4 dca.4 dcl.4 dcm.4 dv.4 gb.4 grf.4 \
+MAN=	apci.4 autoconf.4 cons.4 ct.4 dca.4 dcm.4 dv.4 gb.4 grf.4 \
 	hd.4 hil.4 intro.4 ite.4 le.4 mem.4 ppi.4 rb.4 tc.4
 MLINKS=	mem.4 kmem.4
 MANSUBDIR=/hp300
