--- a/libexec/ld.so/ldd/Makefile
+++ b/libexec/ld.so/ldd/Makefile
@@ -1,8 +1,9 @@
-#	$OpenBSD: Makefile,v 1.1 2000/09/17 17:50:57 deraadt Exp $
+#	$OpenBSD: Makefile,v 1.2 2001/05/14 22:18:22 niklas Exp $
 
 PROG=	ldd
 SRCS=	ldd.c
 MAN=	ldd.1
+CFLAGS+=-Werror
 
 BINDIR=	/usr/bin
 
