--- a/libexec/ld.so/Makefile
+++ b/libexec/ld.so/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.4 2001/05/14 22:18:19 niklas Exp $
+#	$OpenBSD: Makefile,v 1.5 2001/05/15 11:38:25 deraadt Exp $
 
 SUBDIR=libdl ldconfig ldd
 VPATH=${.CURDIR}/../../lib/libc/string:${.CURDIR}/../../sys/lib/libsa
@@ -10,11 +10,11 @@ OBJS+=  strchr.o
 PROG=	ld.so
 MAN=	ld.so.8
 BINDIR=/usr/libexec
-CFLAGS += -Werror
 .if (${MACHINE_ARCH} == "powerpc")
 CFLAGS += -fpic -msoft-float
 .endif
 .if (${MACHINE_ARCH} == "alpha")
+CFLAGS += -Werror
 CFLAGS += -fpic -mno-fp-regs
 LIBCSRCDIR=${.CURDIR}/../../lib/libc
 .include "${LIBCSRCDIR}/arch/alpha/Makefile.inc"
