--- a/usr.sbin/pkg_install/Makefile
+++ b/usr.sbin/pkg_install/Makefile
@@ -1,5 +1,5 @@
-#	$OpenBSD: Makefile,v 1.4 1999/10/05 22:34:44 espie Exp $
+#	$OpenBSD: Makefile,v 1.5 2001/05/21 16:47:50 brian Exp $
 
-SUBDIR=lib add create delete info
+SUBDIR=lib add create delete info version
 
 .include <bsd.subdir.mk>
