--- a/usr.sbin/pkg_install/Makefile
+++ b/usr.sbin/pkg_install/Makefile
@@ -1,5 +1,5 @@
-#	$OpenBSD: Makefile,v 1.5 2001/05/21 16:47:50 brian Exp $
+#	$OpenBSD: Makefile,v 1.6 2001/05/22 08:18:36 brian Exp $
 
-SUBDIR=lib add create delete info version
+SUBDIR=lib add create delete info
 
 .include <bsd.subdir.mk>
