--- a/usr.bin/make/Makefile
+++ b/usr.bin/make/Makefile
@@ -1,16 +1,20 @@
-#	$OpenBSD: Makefile,v 1.26 2001/05/03 13:40:59 espie Exp $
+#	$OpenBSD: Makefile,v 1.27 2001/05/23 12:34:39 espie Exp $
 
 PROG=	make
 CFLAGS+= -I${.OBJDIR} -I${.CURDIR} ${WARNINGS}
-WARNINGS=-Wall -W -Wno-char-subscripts -Wstrict-prototypes -pedantic #-Wmissing-prototypes
+WARNINGS=-Wall -W -Wno-char-subscripts -Wstrict-prototypes -pedantic -Wmissing-prototypes
 
 CFLAGS+=-DUSE_TIMESPEC
+CFLAGS+=-DHAS_BOOL_H
+CFLAGS+=-DHAS_PATHS_H
 .if (${MACHINE_ARCH} == "m88k")
 CFLAGS+=-O0
 .endif
 
-SRCS=	arch.c buf.c compat.c cond.c dir.c error.c for.c job.c lowparse.c \
-	main.c make.c parse.c str.c stats.c suff.c targ.c var.c varmodifiers.c #util.c 
+SRCS=	arch.c buf.c cmd_exec.c compat.c cond.c dir.c error.c for.c \
+	init.c job.c lowparse.c main.c make.c memory.c parse.c \
+	parsevar.c str.c stats.c suff.c targ.c timestamp.c \
+	var.c varmodifiers.c varname.c
 SRCS+=	lstAddNew.c lstAppend.c lstConcat.c lstConcatDestroy.c \
 	lstDeQueue.c lstDestroy.c lstDupl.c lstFindFrom.c lstForEachFrom.c \
 	lstInit.c lstInsert.c lstMember.c lstRemove.c lstReplace.c lstSucc.c
@@ -33,10 +37,10 @@ varhashconsts.h: generate
 condhashconsts.h: generate
 	${.OBJDIR}/generate 2 ${MAGICCONDSLOTS} >${.TARGET}
 
-generate: generate.o stats.o error.o
+generate: generate.o stats.o memory.o
 	${CC} -o ${.TARGET} ${CFLAGS} ${.ALLSRC} ${LDADD}
 
-check: regress.o str.o error.o buf.o
+check: regress.o str.o memory.o buf.o
 	${CC} -o ${.TARGET} ${CFLAGS} ${.ALLSRC} ${LDADD}
 
 regress: check
