--- a/lib/libtelnet/Makefile
+++ b/lib/libtelnet/Makefile
@@ -1,5 +1,5 @@
 #	from: @(#)Makefile	8.2 (Berkeley) 12/15/93
-#	$OpenBSD: Makefile,v 1.4 2000/09/03 18:41:14 espie Exp $
+#	$OpenBSD: Makefile,v 1.5 2001/05/25 10:23:04 hin Exp $
 #	$NetBSD: Makefile,v 1.6 1996/02/24 01:15:15 jtk Exp $
 
 LIB=	telnet
@@ -14,10 +14,9 @@ CFLAGS+= -DKRB4 -DAUTHENTICATION -DENCRYPTION -DDES_ENCRYPTION
 SRCS+= kerberos.c enc_des.c
 .endif
 
-# XXX this has not been tested due to lack of kerberos5 to test with.
 .if (${KERBEROS5:L} == "yes")
 CFLAGS+= -DKRB5 -DAUTHENTICATION -DENCRYPTION -DDES_ENCRYPTION
-SRCS+= kerberos5.c enc_des.c
+SRCS+= kerberos5.c
 .endif
 
 .include <bsd.lib.mk>
