--- a/kerberosV/Makefile
+++ b/kerberosV/Makefile
@@ -1,14 +1,14 @@
-# $OpenBSD: Makefile,v 1.1 2001/05/25 08:24:12 hin Exp $
+# $OpenBSD: Makefile,v 1.2 2001/05/25 12:00:47 jakob Exp $
 
 SUBDIR	= usr.bin/asn1_compile lib usr.bin libexec usr.sbin
 
 build:
 	( cd lib/roken && ${MAKE} )
-	( cd usr.bin/asn1_compile && ${MAKE} && ${MAKE} install )
-	${MAKE} includes
+	( cd usr.bin/asn1_compile && ${MAKE} && ${SUDO} ${MAKE} install )
+	${SUDO} ${MAKE} includes
 	${MAKE} depend
-	( cd lib && ${MAKE} && ${MAKE} install )
+	( cd lib && ${MAKE} && ${SUDO} ${MAKE} install )
 	${MAKE}
-	${MAKE} install
+	${SUDO} ${MAKE} install
 
 .include <bsd.subdir.mk>
