--- a/kerberosV/lib/kadm5clnt/Makefile
+++ b/kerberosV/lib/kadm5clnt/Makefile
@@ -1,11 +1,12 @@
-# $OpenBSD: Makefile,v 1.1 2001/05/25 08:18:54 hin Exp $
+# $OpenBSD: Makefile,v 1.2 2001/05/25 12:38:16 ho Exp $
 
 LIB=	kadm5clnt
 
 KRBDEPTH=../..
 .include <${.CURDIR}/../../Makefile.inc>
 
-INCLUDE_FILES=	${KRB5SRC}/lib/kadm5/{admin.h,private.h} kadm5_err.h
+INCLUDE_FILES=	${KRB5SRC}/lib/kadm5/admin.h ${KRB5SRC}/lib/kadm5/private.h \
+		kadm5_err.h
 
 includes:	kadm5_err.h
 
