Build gssapi library too.

--- a/kerberosV/lib/Makefile
+++ b/kerberosV/lib/Makefile
@@ -1,5 +1,5 @@
-# $OpenBSD: Makefile,v 1.1 2001/05/25 08:18:51 hin Exp $
+# $OpenBSD: Makefile,v 1.2 2001/05/25 12:58:49 hin Exp $
 
-SUBDIR	= roken asn1 krb5 hdb kadm5clnt kadm5srv 45 kafs
+SUBDIR	= roken asn1 krb5 hdb kadm5clnt kadm5srv 45 kafs gssapi
 
 .include <bsd.subdir.mk>
