--- a/kerberosV/usr.bin/Makefile
+++ b/kerberosV/usr.bin/Makefile
@@ -1,7 +1,7 @@
-# $OpenBSD: Makefile,v 1.1 2001/05/25 08:20:30 hin Exp $
+# $OpenBSD: Makefile,v 1.2 2001/05/25 22:14:38 hin Exp $
 
 # XXX asn1_compile is compiled in ../Makefile
 
-SUBDIR	=  kauth klist kdestroy
+SUBDIR	=  kauth klist kdestroy kinit
 
 .include <bsd.subdir.mk>
