Correct include file copying shellcode.

--- a/kerberosV/lib/Makefile.inc
+++ b/kerberosV/lib/Makefile.inc
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile.inc,v 1.1 2001/05/25 08:18:51 hin Exp $
+# $OpenBSD: Makefile.inc,v 1.2 2001/05/25 22:45:56 hin Exp $
 
 .if defined(INCLUDE_FILES)
 INCLUDE_DIR?=	${DESTDIR}/usr/include/kerberosV
@@ -6,7 +6,7 @@ includes:	$(INCLUDE_FILES)
 	mkdir -p ${INCLUDE_DIR}
 	-for i in ${INCLUDE_FILES}; do \
 		echo "installing `basename $$i` in ${INCLUDE_DIR}" ;\
-		cmp -s $$i ${INCLUDE_DIR}/$$i || \
+		cmp -s $$i ${INCLUDE_DIR}/`basename $$i` || \
 		${INSTALL} ${INSTALL_COPY} -m 444 $$i ${INCLUDE_DIR}/`basename $$i` ;\
 	done
 .endif
