Commonize csu code for elf systems, powerpc now no longer has it's own versions of these files.
Fixed a bug in ld.so in this, instead of scheduling the fini of each of
the shared libraries with atexit. schedule a function of ld.so itself
and it will walk all of the open libraries when the program exits.
otherwise a shared library could be dl_open()ed and then dl_close()d
and then it would not be mapped for the atexit processing.

TODO:
What if atexit is not found (process did not link against libc?)
Do shared libraries that are dl_closed have their global destructors run?

--- a/libexec/ld.so/test/Makefile
+++ b/libexec/ld.so/test/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.4 2001/05/14 22:18:23 niklas Exp $
+#	$OpenBSD: Makefile,v 1.5 2001/05/28 21:38:14 drahn Exp $
 
 DIR=/usr/src/libexec/ld.so/obj/ld.so
 .if (${MACHINE_ARCH} != "mips")
@@ -45,6 +45,14 @@ libB.so:	B.o
 
 CCtest:	libA.so libB.so tst.o
 	g++ ${LDFLAGS} -o $@ tst.o libB.so libA.so
+
+run:
+	@echo running CCtest
+	LD_LIBRARY_PATH=. CCtest
+	@echo running dltest -l bar -f bar
+	LD_LIBRARY_PATH=. dltest -l bar -f bar
+	@echo running dltest -l foo -f foo
+	LD_LIBRARY_PATH=. dltest -l foo -f foo
 
 .include <bsd.prog.mk>
 .include <bsd.subdir.mk>
