--- a/usr.bin/su/Makefile
+++ b/usr.bin/su/Makefile
@@ -1,21 +1,7 @@
-#	$OpenBSD: Makefile,v 1.7 2000/09/03 18:41:19 espie Exp $
+#	$OpenBSD: Makefile,v 1.8 2001/05/29 21:40:35 millert Exp $
 
 PROG=	su
 BINOWN=	root
 BINMODE=4555
-
-.include <bsd.own.mk>
-
-.if (${SKEY:L} == "yes")
-CFLAGS+=-DSKEY
-LDADD+= -lskey
-DPADD+= ${LIBSKEY}
-.endif
-
-.if (${KERBEROS:L} == "yes")
-CFLAGS+=-DKERBEROS
-LDADD+=	-lkrb -ldes
-DPADD+=	${LIBKRB} ${LIBDES}
-.endif
 
 .include <bsd.prog.mk>
