--- a/usr.bin/sudo/Makefile.bsd-wrapper
+++ b/usr.bin/sudo/Makefile.bsd-wrapper
@@ -1,8 +1,8 @@
-#	$OpenBSD: Makefile.bsd-wrapper,v 1.9 2000/09/03 18:41:19 espie Exp $
+#	$OpenBSD: Makefile.bsd-wrapper,v 1.10 2001/05/29 21:40:49 millert Exp $
 
 MAN=	sudo.8 sudoers.5 visudo.8
 XCFLAGS=	CC="${CC}" CFLAGS="${CFLAGS} ${COPTS}" LDFLAGS="${LDFLAGS}"
-CONFIGURE_OPTS=	--prefix=/usr --with-devel --with-insults --with-logincap \
+CONFIGURE_OPTS=	--prefix=/usr --with-devel --with-insults --with-bsdauth \
 		--with-env-editor --disable-path-info --with-logfac=authpriv
 
 .include <bsd.own.mk>
