--- a/sbin/isakmpd/Makefile
+++ b/sbin/isakmpd/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.37 2001/05/21 11:19:22 ho Exp $
+#	$OpenBSD: Makefile,v 1.38 2001/05/31 20:21:37 angelos Exp $
 #	$EOM: Makefile,v 1.78 2000/10/15 21:33:42 niklas Exp $
 
 #
@@ -67,8 +67,8 @@ SRCS=		app.c attribute.c cert.c connection.c constants.c conf.c \
 		field.c gmp_util.c hash.c if.c ike_auth.c ike_main_mode.c \
 		ike_phase_1.c ike_quick_mode.c init.c ipsec.c ipsec_fld.c \
 		ipsec_num.c isakmpd.c isakmp_doi.c isakmp_fld.c isakmp_num.c \
-		libcrypto.c log.c message.c math_2n.c math_group.c prf.c sa.c \
-		sysdep.c timer.c transport.c udp.c ui.c util.c
+		key.c libcrypto.c log.c message.c math_2n.c math_group.c \
+		prf.c sa.c sysdep.c timer.c transport.c udp.c ui.c util.c
 
 GENERATED=	exchange_num.h ipsec_fld.h ipsec_num.h isakmp_fld.h \
 		isakmp_num.h
