libsectok for secure tokens (smartcard, iButton, etc)

--- a/lib/libsectok/Makefile
+++ b/lib/libsectok/Makefile
@@ -1,7 +1,16 @@
-#	$OpenBSD: Makefile,v 1.1 2001/05/22 15:35:56 rees Exp $
+# $OpenBSD: Makefile,v 1.2 2001/06/07 15:17:32 rees Exp $
 
-.include <bsd.own.mk>
+LIB=	sectok
+SRCS=	atr.c cmdtab.c input.c r1r2.c sc7816.c todos_atr.c ifdhandler.c scT1.c scio.c scrw.c
+HDRS=	sectok.h
 
-SUBDIR=	lib ifd
+includes:
+	@cd ${.CURDIR}; for i in $(HDRS); do \
+	    j="cmp -s $$i ${DESTDIR}/usr/include/`basename $$i` || \
+		${INSTALL} ${INSTALL_COPY} -o ${BINOWN} -g ${BINGRP} -m 444 $$i \
+		${DESTDIR}/usr/include"; \
+	    echo $$j; \
+	    eval "$$j"; \
+	done
 
-.include <bsd.subdir.mk>
+.include <bsd.lib.mk>
