--- a/share/man/man4/man4.arc/Makefile
+++ b/share/man/man4/man4.arc/Makefile
@@ -1,6 +1,6 @@
-#	$OpenBSD: Makefile,v 1.5 1999/05/20 03:29:04 millert Exp $
+#	$OpenBSD: Makefile,v 1.6 2001/06/20 16:27:27 mpech Exp $
 
 MAN=	autoconf.4 com.4 intro.4 le.4 lpt.4 pms.4 wd.4
-MANSUBDIR=/arc
+MANSUBDIR=arc
 
 .include <bsd.prog.mk>
