--- a/share/man/man4/man4.atari/Makefile
+++ b/share/man/man4/man4.atari/Makefile
@@ -1,8 +1,8 @@
-#	$OpenBSD: Makefile,v 1.2 2001/01/29 02:11:10 niklas Exp $
+#	$OpenBSD: Makefile,v 1.3 2001/06/20 16:27:28 mpech Exp $
 #	$NetBSD: Makefile,v 1.2 1995/11/28 08:03:26 jtc Exp $
 
 MAN=	floppy.4 ms.4
 MLINKS=
-MANSUBDIR=/atari
+MANSUBDIR=atari
 
 .include <bsd.prog.mk>
