--- a/share/man/man4/man4.mac68k/Makefile
+++ b/share/man/man4/man4.mac68k/Makefile
@@ -1,8 +1,8 @@
 #	from: @(#)Makefile	5.1 (Berkeley) 6/29/90
-#	$OpenBSD: Makefile,v 1.6 1998/05/08 23:45:31 gene Exp $
+#	$OpenBSD: Makefile,v 1.7 2001/06/20 16:27:28 mpech Exp $
 
 MAN=	ae.4 adb.4 autoconf.4 intro.4 mainbus.4 mc.4 mem.4 obio.4 sn.4
 MLINKS=	mem.4 kmem.4
-MANSUBDIR=/mac68k
+MANSUBDIR=mac68k
 
 .include <bsd.prog.mk>
