--- a/share/man/man4/man4.mvme68k/Makefile
+++ b/share/man/man4/man4.mvme68k/Makefile
@@ -1,8 +1,8 @@
-#	$OpenBSD: Makefile,v 1.3 2000/03/02 14:46:47 todd Exp $
+#	$OpenBSD: Makefile,v 1.4 2001/06/20 16:27:29 mpech Exp $
 #	from: @(#)Makefile	8.2 (Berkeley) 2/16/94
 
 MAN=	console.4 intro.4 le.4 mem.4
 MLINKS=	mem.4 kmem.4
-MANSUBDIR=/mvme68k
+MANSUBDIR=mvme68k
 
 .include <bsd.prog.mk>
