--- a/share/man/man4/man4.pmax/Makefile
+++ b/share/man/man4/man4.pmax/Makefile
@@ -1,6 +1,6 @@
-#	$OpenBSD: Makefile,v 1.2 2000/09/01 08:49:57 maja Exp $
+#	$OpenBSD: Makefile,v 1.3 2001/06/20 16:27:29 mpech Exp $
 
 MAN=	 intro.4 asc.4 le.4 ioasic.4 dz.4 lk201.4 scc.4 sii.4 tc.4
-MANSUBDIR=/pmax
+MANSUBDIR=pmax
 
 .include <bsd.prog.mk>
