--- a/share/man/man4/man4.powerpc/Makefile
+++ b/share/man/man4/man4.powerpc/Makefile
@@ -1,9 +1,9 @@
-#	$OpenBSD: Makefile,v 1.2 2000/10/13 04:09:20 aaron Exp $
+#	$OpenBSD: Makefile,v 1.3 2001/06/20 16:27:29 mpech Exp $
 #	from: @(#)Makefile	5.1 (Berkeley) 2/12/91
 #	Id: Makefile,v 1.4 1995/12/14 05:41:38 deraadt Exp $
 
 MAN=	com.4
 
-MANSUBDIR=/powerpc
+MANSUBDIR=powerpc
 
 .include <bsd.prog.mk>
