--- a/share/man/man4/man4.sparc/Makefile
+++ b/share/man/man4/man4.sparc/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.20 2001/02/26 21:15:49 aaron Exp $
+#	$OpenBSD: Makefile,v 1.21 2001/06/20 16:27:30 mpech Exp $
 #	from: @(#)Makefile	8.2 (Berkeley) 2/16/94
 
 MAN=	intro.4
@@ -9,6 +9,6 @@ MAN+=	sw.4 tctrl.4 tcx.4 xbox.4 xd.4 xy.4 zs.4
 MLINKS=		mem.4 kmem.4
 MLINKS+=	fga.4 fvme.4
 MLINKS+=	fd.4 fdc.4
-MANSUBDIR=/sparc
+MANSUBDIR=sparc
 
 .include <bsd.prog.mk>
