--- a/share/man/man4/man4.sun3/Makefile
+++ b/share/man/man4/man4.sun3/Makefile
@@ -1,9 +1,9 @@
 # 	from: @(#)Makefile	8.2 (Berkeley) 2/16/94
-#	$OpenBSD: Makefile,v 1.2 1997/01/13 00:29:27 kstailey Exp $
+#	$OpenBSD: Makefile,v 1.3 2001/06/20 16:27:30 mpech Exp $
 #	$NetBSD: Makefile,v 1.1.1.1 1995/08/08 20:18:53 gwr Exp $
 
 MAN=	bwtwo.4 cgtwo.4 cgfour.4 ie.4 le.4 leds.4 mem.4
 MLINKS=	mem.4 kmem.4
-MANSUBDIR=/sun3
+MANSUBDIR=sun3
 
 .include <bsd.prog.mk>
