Build esetenv.c into libroken, needed by krb5 pagsh

--- a/kerberosV/lib/roken/Makefile
+++ b/kerberosV/lib/roken/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.1 2001/05/25 08:18:55 hin Exp $
+# $OpenBSD: Makefile,v 1.2 2001/06/21 23:30:11 hin Exp $
 
 LIB	= roken
 
@@ -17,6 +17,7 @@ SRCS=	base64.c		\
 	emalloc.c		\
 	eread.c			\
 	erealloc.c		\
+	esetenv.c		\
 	estrdup.c		\
 	ewrite.c		\
 	get_default_username.c	\
