argh.  stop using kernfs, using dmesg using sysctl.  encode ARCH into install.md at build time.  remove some crud.  and the icing on the cake: skip testing all this until next week

--- a/distrib/alpha/inst-common/mtree.conf
+++ b/distrib/alpha/inst-common/mtree.conf
@@ -1,5 +1,5 @@
 #
-#	$OpenBSD: mtree.conf,v 1.1 1997/05/07 12:46:52 niklas Exp $
+#	$OpenBSD: mtree.conf,v 1.2 2001/06/23 19:44:37 deraadt Exp $
 #
 
 /set type=dir uname=root gname=wheel mode=0755
@@ -39,11 +39,6 @@ sbin
 # ./tmp
 tmp
 # ./tmp
-..
-
-# ./kern
-kern
-# ./kern
 ..
 
 # ./usr
