--- a/distrib/i386/floppies/common/instbin-nokrb.conf
+++ b/distrib/i386/floppies/common/instbin-nokrb.conf
@@ -1,4 +1,4 @@
-#	$OpenBSD: instbin-nokrb.conf,v 1.6 2000/07/07 21:52:14 marc Exp $
+#	$OpenBSD: instbin-nokrb.conf,v 1.7 2001/06/23 19:44:42 deraadt Exp $
 #
 # instbin-nokrb.conf - unified binary for the inst/upgr floppies
 #
@@ -9,7 +9,7 @@ srcdirs usr.sbin/pppd sys/arch/i386/stand
 progs cat chmod cp dd df disklabel dhclient ed
 progs fsck_ffs ftp fdisk
 progs ifconfig init less ln ls mkdir mknod mount mount_cd9660
-progs mount_ffs mount_msdos mount_kernfs mount_ext2fs
+progs mount_ffs mount_msdos mount_ext2fs
 progs mv newfs pax ksh ping reboot rm route
 progs sed sleep stty umount
 progs rsh restore gzip grep installboot
