--- a/distrib/i386/floppies/ramdiskC/instbin.conf
+++ b/distrib/i386/floppies/ramdiskC/instbin.conf
@@ -1,4 +1,4 @@
-#	$OpenBSD: instbin.conf,v 1.1 2001/04/09 06:55:40 deraadt Exp $
+#	$OpenBSD: instbin.conf,v 1.2 2001/06/23 19:44:43 deraadt Exp $
 #
 # instbin.conf - unified binary for the inst/upgr floppies
 #
@@ -9,7 +9,7 @@ srcdirs usr.sbin/pppd sys/arch/i386/stand
 progs cat chmod cp dd df disklabel dhclient ed
 progs fsck_ffs ftp fdisk
 progs ifconfig init less ln ls mkdir mknod mount mount_cd9660
-progs mount_ffs mount_msdos mount_kernfs mount_ext2fs
+progs mount_ffs mount_msdos mount_ext2fs
 progs mv newfs pax ksh ping reboot rm route
 progs sed sleep stty umount wicontrol ancontrol
 progs rsh restore gzip grep installboot
