--- a/distrib/mvme68k/ramdisk/mtree.conf
+++ b/distrib/mvme68k/ramdisk/mtree.conf
@@ -1,4 +1,4 @@
-#	$OpenBSD: mtree.conf,v 1.2 2000/01/24 04:50:26 smurph Exp $
+#	$OpenBSD: mtree.conf,v 1.3 2001/06/23 19:44:47 deraadt Exp $
 
 /set type=dir uname=root gname=wheel mode=0755
 # .
@@ -33,11 +33,6 @@ mnt
 # ./mnt2
 mnt2
 # ./mnt2
-..
-
-# ./kern
-kern
-# ./kern
 ..
 
 # ./sbin
