--- a/distrib/mvme88k/ramdisk/mtree.conf
+++ b/distrib/mvme88k/ramdisk/mtree.conf
@@ -1,5 +1,5 @@
 #
-#	$OpenBSD: mtree.conf,v 1.1 1998/12/17 02:16:33 smurph Exp $
+#	$OpenBSD: mtree.conf,v 1.2 2001/06/23 19:44:50 deraadt Exp $
 #
 
 /set type=dir uname=root gname=wheel mode=0755
@@ -39,11 +39,6 @@ sbin
 # ./tmp
 tmp
 # ./tmp
-..
-
-# ./kern
-kern
-# ./kern
 ..
 
 # ./usr
