--- a/distrib/powerpc/ramdisk/mtree.conf
+++ b/distrib/powerpc/ramdisk/mtree.conf
@@ -1,4 +1,4 @@
-#	$OpenBSD: mtree.conf,v 1.3 2001/03/25 06:30:41 drahn Exp $
+#	$OpenBSD: mtree.conf,v 1.4 2001/06/23 19:44:54 deraadt Exp $
 
 /set type=dir uname=root gname=wheel mode=0755
 # .
@@ -28,11 +28,6 @@ mnt
 # ./mnt2
 mnt2
 # ./mnt2
-..
-
-# ./kern
-kern
-# ./kern
 ..
 
 # ./sbin
