--- a/libexec/login_krb4/Makefile
+++ b/libexec/login_krb4/Makefile
@@ -1,8 +1,8 @@
-#	$OpenBSD: Makefile,v 1.1 2000/12/12 02:31:36 millert Exp $
+#	$OpenBSD: Makefile,v 1.1 2001/06/24 23:26:22 hin Exp $
 
-PROG=	login_kerberos
-SRCS=	login_kerberos.c
-MAN=	login_kerberos.8
+PROG=	login_krb4
+SRCS=	login_krb4.c
+MAN=	${PROG}.8
 DPADD=  ${LIBUTIL}
 LDADD=  -lutil
 
