--- a/libexec/Makefile
+++ b/libexec/Makefile
@@ -1,5 +1,5 @@
 #	from: @(#)Makefile	5.7 (Berkeley) 4/1/91
-#	$OpenBSD: Makefile,v 1.19 2001/06/13 12:46:06 art Exp $
+#	$OpenBSD: Makefile,v 1.20 2001/06/24 23:26:18 hin Exp $
 
 .include <bsd.own.mk>
 
@@ -7,7 +7,7 @@ SUBDIR=	atrun comsat fingerd ftpd getNAME getty identd lockspool \
 	mail.local makewhatis rexecd rlogind rshd \
 	rpc.rquotad rpc.rstatd rpc.rusersd rpc.rwalld rpc.sprayd \
 	talkd tcpd telnetd tftpd uucpd smtpd
-SUBDIR+=login_passwd login_skey login_kerberos login_krb-or-pwd login_reject \
+SUBDIR+=login_passwd login_skey login_krb4 login_krb-or-pwd login_reject \
 	login_chpass login_lchpass login_token
 
 .if (${YP:L} == "yes")
