tmpfs - ported from NetBSD by pedro@.
Based on tmpfs5.diff

--- a/sbin/Makefile
+++ b/sbin/Makefile
@@ -5,8 +5,8 @@ SUBDIR=	atactl badsect bioctl clri dhclient \
 	fsck_msdos fsdb fsirand growfs ifconfig iked init iopctl ipsecctl  \
 	isakmpd kbd ldattach lmccontrol mknod modload modunload mount \
 	mount_cd9660 mount_ext2fs mount_ffs mount_msdos \
-	mount_nfs mount_udf \
-	mount_vnd mountd ncheck_ffs newfs newfs_ext2fs newfs_msdos \
+	mount_nfs mount_udf mount_vnd mount_tmpfs \
+	mountd ncheck_ffs newfs newfs_ext2fs newfs_msdos \
 	nfsd nologin pfctl pflogd ping ping6 quotacheck \
 	reboot restore route rtsol savecore scan_ffs \
 	scsi shutdown slattach swapctl sysctl ttyflags tunefs \
