emulate libreadline via libedit
lots of help drahn
ok oga & drahn

--- a/lib/libedit/Makefile
+++ b/lib/libedit/Makefile
@@ -65,7 +65,7 @@ ASRC=${LIBEDITDIR}/vi.c ${LIBEDITDIR}/emacs.c ${LIBEDITDIR}/common.c
 
 CLEANFILES+=	${AHDR} fcns.h help.h fcns.c help.c
 
-#SUBDIR+=	readline
+SUBDIR+=	readline
 HOST_SH=	sh
 
 vi.h: vi.c makelist
@@ -121,6 +121,17 @@ includes:
 		/dev/null 2>&1 || \
 	${INSTALL} ${INSTALL_COPY} -o ${BINOWN} -g ${BINGRP} -m 444 histedit.h \
 		${DESTDIR}/usr/include
+	-cd ${.CURDIR}/readline && exec ${SUDO} ${MAKE} includes
 
 .include <bsd.lib.mk>
+
+#this has to be after bsd.lib.mk so it can detect SHLIB_(MAJOR|MINOR)
+afterinstall:
+.if !defined(NOPIC) && defined(SHLIB_MAJOR) && defined(SHLIB_MINOR)
+	ln -f ${LIBDIR}/libedit.so.${SHLIB_MAJOR}.${SHLIB_MINOR} \
+		${LIBDIR}/libreadline.so.${SHLIB_MAJOR}.${SHLIB_MINOR}
+.endif
+	ln -f ${LIBDIR}/libedit.a ${LIBDIR}/libreadline.a
+	ln -f ${LIBDIR}/libedit_p.a ${LIBDIR}/libreadline_p.a
+
 .include <bsd.subdir.mk>
