add uuid code from from netbsd
local changes:
remove rcsid and references to inexistent header files

comment out compile-time assertions

replace a kmutex_t with a struct rwlock

adapt uuid_node() to bitrig

one more case of cprng_fast32() -> arc4random()

comment out syscall for now

be16toh -> betoh16

bool->int

Get rid of static in the kernel.

Do what section 4.5 of RFC4122 suggests and hide the IEEE 802 address of
the generating machine, using random bits instead.

--- a/include/Makefile
+++ b/include/Makefile
@@ -21,7 +21,7 @@ FILES=	a.out.h ar.h assert.h bitstring.h blf.h bm.h bsd_auth.h \
 	sgtty.h sha1.h sha2.h signal.h sndio.h spawn.h stab.h \
 	stdbool.h stddef.h stdio.h stdlib.h \
 	string.h strings.h struct.h sysexits.h tar.h tgmath.h \
-	time.h ttyent.h tzfile.h unistd.h utime.h utmp.h vis.h \
+	time.h ttyent.h tzfile.h unistd.h utime.h utmp.h uuid.h vis.h \
 	wchar.h wctype.h
 
 FILES+=	link.h link_aout.h link_elf.h ieeefp.h
